--- a/src/app/components/core/home/home.component.scss
+++ b/src/app/components/core/home/home.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100% - 120px);
+    height: 100%;
 
     .panel {
         width: 50vw;
