--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,10 +4,15 @@ html, body {
     height: 100%;
 }
 
+.wrapper {
+	min-height: 100%;
+	position: relative;
+}
 .cursor-pointer {
     cursor: pointer;
 }
 
 .main_content {
     height: calc(100% - 120px);
+    padding-bottom: 100px;
 }
