--- a/src/app/components/core/header/header.component.html
+++ b/src/app/components/core/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
+  <nav class="navbar navbar-inverse">
+    <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand cursor-pointer" routerLink="/home">Quiz Application</a>
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
