--- a/src/app/components/core/quiz/quiz.component.html
+++ b/src/app/components/core/quiz/quiz.component.html
@@ -1,4 +1,6 @@
-<div class="quiz_header">
-    <h3>Angular JS</h3>
+<div class="container">
+	<div class="quiz_header">
+		<h3>Angular JS</h3>
+	</div>
+	<router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
