--- a/src/app/components/core/home/home.component.scss
+++ b/src/app/components/core/home/home.component.scss
@@ -10,6 +10,7 @@
 
         .row {
             height: 40vh;
+            display: flex;
 
             .instruction_box,
             .topic_list {
