--- a/src/app/components/core/quiz/quiz.component.html
+++ b/src/app/components/core/quiz/quiz.component.html
@@ -1,5 +1,5 @@
 <div class="quiz_header">
     <h3>Angular JS</h3>
 </div>
-<quiz-questions *ngIf="!completed"></quiz-questions>
+<quiz-questions></quiz-questions>
 <quiz-result *ngIf="completed"></quiz-result>
