modified questions fetching using resolve

--- a/src/app/components/core/quiz/quiz.component.html
+++ b/src/app/components/core/quiz/quiz.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="quiz_header">
-	    <h3>Topic Name</h3>
+	    <h3>{{currentTopic[0].name}}</h3>
 	</div>
 	<quiz-questions *ngIf="!completed" [quiz]="currentTopic" (quizAnswered)="handleQuizAnswered($event)"></quiz-questions>
 	<quiz-result *ngIf="completed"></quiz-result>
