--- a/src/app/components/core/quiz/quiz.component.html
+++ b/src/app/components/core/quiz/quiz.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="quiz_header">
-		<h3>{{topicName}}</h3>
+		<h3>{{topicName}}<span *ngIf="completed"> - Result</span></h3>
 	</div>
 	<quiz-questions *ngIf="!completed" [quiz]="currentTopic" (quizAnswered)="handleQuizAnswered($event)"></quiz-questions>
 	<quiz-result *ngIf="completed" [answers]="userAnswers"></quiz-result>
