--- a/src/app/components/core/quiz/result/result.component.scss
+++ b/src/app/components/core/quiz/result/result.component.scss
@@ -1,17 +1,42 @@
 .result {
     margin-top: 40px;
 
-    h2 {
-        font-size: 20px;
-        padding: 0;
-        margin-left: 20px;
-    }
+    // h2 {
+    //     font-size: 20px;
+    //     padding: 0;
+    //     margin-left: 20px;
+    // }
 
     .result_section {
         padding: 24px;
+        display: flex;
+        background-color: #fff;
+        border-bottom: 1px solid #ccc;
 
-        p {
-            color: #333;
+        .left_section {}
+
+        .right_section {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            li {
+                &:first-child {
+                    color: #4CAF50;
+                }
+
+                b {
+                    font-size: 30px;
+                }
+                font-size: 18px;
+                color: #000;
+                padding: 10px;
+                margin-bottom: 5px;
+                text-align: center;
+                width: 100%;
+            }
         }
     }
 }
