--- a/src/app/components/core/quiz/questions/questions.component.html
+++ b/src/app/components/core/quiz/questions/questions.component.html
@@ -22,13 +22,11 @@
       <div class="option-wrapper form-group" *ngIf="question.questionType == 3">
         <input type="text" class="form-control" placeholder="Type your answer" name="answer" [(ngModel)]="question.userAnswer" (ngModelChange)="checkAnswerEmpty(question.userAnswer)" (keyup.enter)="triggerButton(question.QNo, q.questions.length, question.questionType, question.userAnswer)" autofocus>
       </div>
-      <div class="next-wrapper" *ngIf="nextMessage">
-        <span *ngIf="question.QNo != q.questions.length">Select / provide an answer to continue to next question.</span>
-        <span *ngIf="question.QNo == q.questions.length">Select / provide an answer to view result.</span>
-      </div>
-      <div class="next-wrapper" *ngIf="!nextMessage">
-        <button type="button" class="btn btn-primary" (click)="nextQuestion()" *ngIf="question.QNo != q.questions.length">Next</button>
-        <button type="button" class="btn btn-success" (click)="viewResult()" *ngIf="question.QNo == q.questions.length">View Result</button>
+      <div class="next-wrapper">
+        <span *ngIf="nextMessage && (question.QNo != q.questions.length)">Select / provide an answer to continue to next question.</span>
+        <span *ngIf="nextMessage && (question.QNo == q.questions.length)">Select / provide an answer to view result.</span>
+        <button type="button" class="btn btn-primary" (click)="nextQuestion()" *ngIf="!nextMessage && (question.QNo != q.questions.length)">Next</button>
+        <button type="button" class="btn btn-success" (click)="viewResult()" *ngIf="!nextMessage && (question.QNo == q.questions.length)">View Result</button>
       </div>
     </div>
   </div>
