review comments changes

--- a/src/app/components/core/quiz/quiz.component.html
+++ b/src/app/components/core/quiz/quiz.component.html
@@ -3,5 +3,5 @@
 		<h3>{{topicName}}<span *ngIf="completed"> - Result</span></h3>
 	</div>
 	<quiz-questions *ngIf="!completed" [quiz]="currentTopic" (quizAnswered)="handleQuizAnswered($event)"></quiz-questions>
-	<quiz-result *ngIf="completed" [answers]="userAnswers"></quiz-result>
+	<quiz-result *ngIf="completed" [quiz]="userAnswers"></quiz-result>
 </div>
