--- a/src/app/components/core/quiz/result/result.component.html
+++ b/src/app/components/core/quiz/result/result.component.html
@@ -8,7 +8,7 @@
                 <p>Correct answers:</p>
                 <b>{{correctAnswers}}</b>
             </li>
-            <li>Total questions: 10</li>
+            <li>Total questions: {{questionLength}}</li>
         </ul>
     </div>
 </div>
