--- a/src/app/components/core/quiz/quiz.component.html
+++ b/src/app/components/core/quiz/quiz.component.html
@@ -2,6 +2,6 @@
 	<div class="quiz_header">
 		<h3>{{topicName}}<span *ngIf="completed"> - Result</span></h3>
 	</div>
-	<quiz-questions *ngIf="!completed" [quiz]="currentTopic" (quizAnswered)="handleQuizAnswered($event)"></quiz-questions>
+	<quiz-questions *ngIf="!completed" [currentQuizData]="currentQuizData" (answeredQuizData)="handleAnsweredQuiz($event)"></quiz-questions>
 	<quiz-result *ngIf="completed" [answers]="userAnswers"></quiz-result>
 </div>
