--- a/src/app/components/core/quiz/questions/questions.component.html
+++ b/src/app/components/core/quiz/questions/questions.component.html
@@ -1,12 +1,12 @@
-<div *ngFor="let q of quiz">
-  <div class="contents-wrapper" *ngFor="let question of filteredQuestions(q.questions)">
-    <span class="item-count">Question {{ question.QNo }} of {{ q.questions.length }}</span>
-    <div class="item-desc">
+<div *ngFor="let q of currentQuizData">
+  <div class="contents-wrapper" *ngFor="let question of q.questions | slice:this.questionNum:this.questionNum + 1">
+    <span class="question-count">Question {{ question.QNo }} of {{ q.questions.length }}</span>
+    <div class="question-desc">
       <span class="question-text">Q. {{ question.name }}</span>
       <div class="option-wrapper" *ngIf="question.questionType == 1">
         <div class="option-items" *ngFor="let option of question.options; let optionCount = index">
           <div class="radio radio-primary">
-            <input type="radio" name="options" id=`radio-{{optionCount}}` (change)="changeOnSelect(option)" (keyup.enter)="triggerButton(question.QNo, q.questions.length)">
+            <input type="radio" name="options" id=`radio-{{optionCount}}` (change)="singleOptionSelected(option)" (keyup.enter)="triggerNextButton(question.QNo, q.questions.length)">
             <label for=`radio-{{optionCount}}`>{{ option.name }}</label>
           </div>
         </div>
@@ -14,19 +14,17 @@
       <div class="option-wrapper" *ngIf="question.questionType == 2">
         <div class="option-items" *ngFor="let option of question.options; let optionCount = index">
           <div class="checkbox checkbox-primary">
-            <input type="checkbox" name="options" id=`checkbox-{{optionCount}}` (click)="checkBoxChange($event, option)" [(ngModel)]="option.isSelected" (keyup.enter)="triggerButton(question.QNo, q.questions.length, question.questionType)">
+            <input type="checkbox" name="options" id=`checkbox-{{optionCount}}` (click)="multipleOptionsSelected($event, option)" [(ngModel)]="option.isSelected" (keyup.enter)="triggerNextButton(question.QNo, q.questions.length, question.questionType)">
             <label for=`checkbox-{{optionCount}}`>{{ option.name }}</label>
           </div>
         </div>
       </div>
       <div class="option-wrapper form-group" *ngIf="question.questionType == 3">
-        <input type="text" class="form-control" placeholder="Type your answer" name="answer" [(ngModel)]="question.userAnswer" (ngModelChange)="checkAnswerEmpty(question.userAnswer)" (keyup.enter)="triggerButton(question.QNo, q.questions.length, question.questionType, question.userAnswer)" autofocus>
+        <input type="text" class="form-control" placeholder="Type your answer" name="answer" [(ngModel)]="question.userAnswer" (ngModelChange)="checkAnswerEmpty(question.userAnswer)" (keyup.enter)="triggerNextButton(question.QNo, q.questions.length, question.questionType, question.userAnswer)" autofocus>
       </div>
-      <div class="next-wrapper">
-        <span *ngIf="nextMessage && (question.QNo != q.questions.length)">Select / provide an answer to continue to next question.</span>
-        <span *ngIf="nextMessage && (question.QNo == q.questions.length)">Select / provide an answer to view result.</span>
-        <button type="button" class="btn btn-primary" (click)="nextQuestion()" *ngIf="!nextMessage && (question.QNo != q.questions.length)">Next</button>
-        <button type="button" class="btn btn-success" (click)="viewResult()" *ngIf="!nextMessage && (question.QNo == q.questions.length)">View Result</button>
+      <div class="button-wrapper">
+        <button type="button" class="btn btn-primary" (click)="nextQuestion()" *ngIf="question.QNo !==  q.questions.length" [disabled]="!enableNextButton">Next</button>
+        <button type="button" class="btn btn-success" (click)="viewResult()" *ngIf="question.QNo ===  q.questions.length" [disabled]="!enableNextButton">View Result</button>
       </div>
     </div>
   </div>
