model changes, naming convention correction

--- a/src/app/components/core/quiz/result/result.component.html
+++ b/src/app/components/core/quiz/result/result.component.html
@@ -5,8 +5,13 @@
             <chart [options]="options"></chart>
         </div>
         <ul class="right_section">
-            <li><p>Correct answers:</p><b>{{correctAnswers}}</b></li>
-            <li>Total questions: 10</li>
+            <li>
+                <p>Correct answers:</p>
+                <b>{{correctAnswers}}</b>
+            </li>
+            <li>
+                Total questions: {{questionLength}}
+            </li>
         </ul>
     </div>
 </div>
