--- a/src/app/components/core/quiz/result/result.component.html
+++ b/src/app/components/core/quiz/result/result.component.html
@@ -1,17 +1,14 @@
-<div class="result">
-    <!-- <h2>Quiz Results</h2> -->
+<div class="result col-md-12 col-sm-12 col-xs-12">
     <div class="result_section">
-        <div class="left_section">
-            <chart [options]="options"></chart>
+        <div>
+            <chart [options]="chartOptions"></chart>
         </div>
         <ul class="right_section">
             <li>
                 <p>Correct answers:</p>
                 <b>{{correctAnswers}}</b>
             </li>
-            <li>
-                Total questions: {{questionLength}}
-            </li>
+            <li>Total questions: {{questionLength}}</li>
         </ul>
     </div>
 </div>
