--- a/src/app/components/core/quiz/result/result.component.html
+++ b/src/app/components/core/quiz/result/result.component.html
@@ -1,9 +1,9 @@
 <div class="result col-md-12 col-sm-12 col-xs-12">
-    <div class="result_section">
+    <div class="result-section">
         <div>
             <chart [options]="chartOptions"></chart>
         </div>
-        <ul class="right_section">
+        <ul class="right-section">
             <li>
                 <p>Correct answers:</p>
                 <b>{{correctAnswers}}</b>
