--- a/src/app/components/core/quiz/result/result.component.scss
+++ b/src/app/components/core/quiz/result/result.component.scss
@@ -1,7 +1,7 @@
 .result {
     margin-top: 40px;
 
-    .result_section {
+    .result-section {
         padding: 24px;
         display: flex;
         flex-direction: row;
@@ -10,7 +10,7 @@
         background-color: #fff;
         border-bottom: 1px solid #ccc;
 
-        .right_section {
+        .right-section {
             list-style: none;
             padding: 0;
             display: flex;
